# backend/src/server.ts
@@ -19,7 +19,6 @@ import {
   unitsV2Router,
 } from '@domains/academics/units';
 import { reviewsV2Router } from '@domains/academics/reviews';
-import { setusV1Router } from '@domains/academics/setu';
 import { authV1Router, usersV2Router } from '@domains/identity/users';
 import { notificationsV1Router } from '@domains/identity/notifications';
 import { adminV1Router } from '@domains/platform/admin';
@@ -91,7 +90,6 @@ app.use('/api/v1/auth', authV1Router);
 app.use('/api/v2/users', usersV2Router);
 app.use('/api/v1/notifications', notificationsV1Router);
 app.use('/api/v1/github', githubV1Router);
-app.use('/api/v1/setus', setusV1Router);
 app.use('/api/v2/jobs', jobsV2Router);
 if (isDevelopment && !isProductionMachine) {
   app.use('/api/admin', adminV1Router);
